# AICodeReview

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  actors_graph.dot  ai-codebase-review.dot  codeReview.txt  final.txt  game.py  hashmap_function.txt  install.sh  parse_function.txt  reviewed_information.md  rustTest.rs  state.json  stored_functions.txt  test-1.txt  test-2.txt  test.txt  test_hashmap.txt  update.sh
ai-codebase-review-ld/: Cargo.toml  Dockerfile
ai-codebase-review-ld/src/: main.rs
ai-codebase-review-ld/src/actor/: archive.rs  function_reviewer.rs  function_scraper.rs  function_storer.rs  parse_function.rs  read_directory.rs  read_file.rs
review_output/src/actor/: archive.md  function_storer.md  parse_function.md
src/: args.rs  main.rs  test.py  test.txt
src/actor/: ai_sender.rs  api_response_saver.rs  api_submitter.rs  archive.rs  file_reader.rs  file_saver.rs  function_reviewer.rs  function_scraper.rs  function_storer.rs  input_printer_actor.rs  input_receiver.rs  line_number_adder.rs  parse_function.rs  read_directory.rs  read_file.rs  response_printer.rs
src/actors/src/: args.rs  main.rs
src/actors/src/actor/: mod_actor1.rs  mod_actor2.rs  mod_actor3.rs  mod_actor4.rs  mod_actor5.rs
test/: async_fetch_data.js  chat_server.rs  concurrent_fetch.go  fibonacci.pas  file_operation.c  file_search.kt  matrix_multiply.f90  pythonTest.py  quicksort.lisp  random_cobol.cbl  web_scraper.py
~/review_output/src/actor/: archive.md  function_reviewer.md  function_scraper.md  function_storer.md  parse_function.md  read_file.md
