[package]
name = "actor_loop"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
#steady_state     = { path = "../../../core", features = ["proactor_nuclei", "prometheus_metrics"], default-features = false }

steady_state     = "0.0.25"
structopt        = "0.3.26"
structopt-derive = "0.4.18"
flexi_logger     = "0.29.0"
log              = "0.4.22"
futures          = "0.3.30"


surf = "2.3.0"
serde_json = "1.0"
async-std = "1.10"