[package]
name = "ai-codebase-review-ld"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
#steady_state     = { path = "../../../core", features = ["proactor_nuclei", "prometheus_metrics"], default-features = false }

# for local testing
#steady_state     = { path = "../../../steady-state-stack/core", features = ["proactor_nuclei", "prometheus_metrics"], default-features = true }

steady_state     = "0.1.0"
structopt        = "0.3.26"
structopt-derive = "0.4.18"
flexi_logger     = "0.29.6"
log              = "0.4.22"
futures          = "0.3.31"

# ADDED FOR AI CODEBASE REVIEW
surf = "2.3.0"
serde_json = "1.0"
async-std = "1.10"
regex = "1.10.0"

[dev-dependencies]
async-std        = {  version = "1.12.0", features = ["attributes"] }
futures-timer    = "3.0.3"
